# dotfiles

./: .gitattributes  .gitignore  Makefile  README.md  REAME.md
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
atuin/.config/atuin/: config.toml
bash/: .bash_profile  .bashrc
bash/.bash/: aliases.sh  ascii_prompt.sh  extra_software.sh  non_root_config.sh  prompt.sh
bash/.config/bash/: aliases.sh  extra_software.sh  non_root_config.sh
bat/.config/bat/: config
bspwm/.config/bspwm/: bspwmrc  buckle.sh  init.sh  (+9 more)
compton/.config/: compton.conf
fzf/: .fzfrc
gdb/: .gdbinit
input/: .inputrc
picom/.config/: picom.conf
profile/: .profile
tex/.texmf/: manager.sh
tmux/: .tmux.conf
tmux/.tmux/: theme.sh
vim/: .vimrc
yarn/: .yarnrc.yml
zsh/: .zsh_plugins.txt  .zshrc
zsh/.config/zsh/prompt/: .editorconfig  CMakeLists.txt  CMakePresets.json  build.sh  init.zsh
zsh/.config/zsh/prompt/src/: config.hpp  left.cpp  override_last_prompt.cpp
zsh/.config/zsh/prompt/src/cli/: parser.cpp  parser.hpp
zsh/.config/zsh/prompt/src/cursor/: clear.hpp  delete.hpp  move.hpp
zsh/.config/zsh/prompt/src/dir/: working.cpp  working.hpp
zsh/.config/zsh/prompt/src/env/: env.cpp  env.hpp
zsh/.config/zsh/prompt/src/git/: info.cpp  info.hpp
zsh/.config/zsh/prompt/src/icon/: icon.cpp  icon.hpp
zsh/.config/zsh/prompt/src/shell/: escapes.hpp
zsh/.config/zsh/prompt/src/sys/: exec.hpp
zsh/.config/zsh/prompt/src/term/: info.hpp
zsh/.config/zsh/prompt/src/term/ansi/: colors.hpp
zsh/.config/zsh/prompt/src/text/: right_ostream.hpp  text.cpp  text.hpp
(+615 files in other folders)
